--- a/sbnz_2020/src/main/resources/application.properties
+++ b/sbnz_2020/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8081
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/sbnz_2020?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345
