--- a/vet-diagnostic-system-angular/angular.json
+++ b/vet-diagnostic-system-angular/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "vet-diagnostic-system-angular:build"
+            "browserTarget": "vet-diagnostic-system-angular:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
