--- a/vet-diagnostic-system-angular/angular.json
+++ b/vet-diagnostic-system-angular/angular.json
@@ -26,6 +26,9 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/startbootstrap-freelancer-gh-pages/css/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
             "scripts": [
