--- a/vet-diagnostic-system-angular/package.json
+++ b/vet-diagnostic-system-angular/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.7",
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
@@ -21,6 +22,8 @@
     "@angular/router": "~9.1.7",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "primeicons": "^4.0.0-rc.1",
+    "primeng": "^9.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
