--- a/vet-diagnostic-system-angular/package.json
+++ b/vet-diagnostic-system-angular/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "moment": "^2.26.0",
+    "ng-multiselect-dropdown": "^0.2.10",
+    "open-iconic": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
