--- a/vet-diagnostic-system-angular/package.json
+++ b/vet-diagnostic-system-angular/package.json
@@ -25,6 +25,8 @@
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
     "ng-multiselect-dropdown": "^0.2.10",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-toastr": "^12.0.1",
     "open-iconic": "^1.1.1",
     "primeicons": "^4.0.0-rc.1",
     "primeng": "^9.0.6",
