--- a/sbnz_2020/src/main/resources/application.properties
+++ b/sbnz_2020/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
