--- a/sbnz_2020/src/main/resources/application.properties
+++ b/sbnz_2020/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=8081
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sbnz_2020?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sbnz_2020?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
