--- a/vet-diagnostic-system-angular/package.json
+++ b/vet-diagnostic-system-angular/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@stomp/stompjs": "^5.4.4",
     "angular-bootstrap-datetimepicker": "^4.0.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
+    "net": "^1.0.2",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng-pick-datetime": "^7.0.0",
     "ngx-toastr": "^12.0.1",
@@ -31,6 +33,7 @@
     "primeicons": "^4.0.0-rc.1",
     "primeng": "^9.0.6",
     "rxjs": "~6.5.4",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
